# magic-math

./: .gitignore  LICENSE  README.md  chat.bat  chat.sh  pyproject.toml  requirements.txt  run.bat  run.sh
app/: chat.html  index.html
docs/: architecture.md
magicmath/: __init__.py  chat.py  config.py  data.py  events.py  lenses.py  model.py  notebook.py  sample.py  tokenizer.py  train.py  train_cli.py  web.py
notebooks/: magic_math.ipynb
scripts/: bootstrap.py  build_notebook.py
