[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-math"
version = "0.1.0"
description = "Train a small, modern language model from scratch, end to end — in Colab or on your own GPU."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "asystemoffields" }]
dependencies = ["torch", "numpy", "tokenizers"]

[project.optional-dependencies]
notebook = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/asystemoffields/magic-math"

[tool.setuptools]
packages = ["magicmath"]
